test/testPrint/print2.out
print2.rask:3:5: error: unknown identifier 'xx'

